--- a/android/app/src/main/res/layout/view_traffic_light.xml
+++ b/android/app/src/main/res/layout/view_traffic_light.xml
@@ -7,6 +7,22 @@
     tools:parentTag="android.widget.FrameLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/client_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#009688" />
+
+
     <LinearLayout
         android:id="@+id/light_container"
         android:layout_width="match_parent"
@@ -43,4 +59,5 @@
 
     </LinearLayout>
 
+    </LinearLayout>
 </merge>
